--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable false;
+        }
+        customDebuggableBuildType {
+            debuggable true
+        }
+        debug {
+            debuggable true;
         }
     }
 }
